# Visual-Novel

./: .gitignore  Cargo.toml  README-ET.MD  README-RUS.MD  README.MD  README_EE.MD  build.rs
.github/workflows/: rust.yml
cat_engine/: Cargo.toml  README.MD
cat_engine/src/: lib.rs  mouse_cursor.rs  window.rs
cat_engine/src/audio/: audio_track.rs  mod.rs
cat_engine/src/graphics/: graphic_basics.rs  graphics.rs  mod.rs  simple_graphics.rs  texture_graphics.rs
cat_engine/src/image/: mod.rs  texture.rs
cat_engine/src/text/: mod.rs  text_base.rs
cat_engine/src/window/: mod.rs  mouse_cursor.rs  settings.rs  window.rs  window_raw_events.rs  window_settings.rs
engine/: Cargo.toml  README.MD
engine/src/: game_texture.rs  game_window.rs  image_base.rs  lib.rs  mouse_cursor.rs  music.rs  window.rs
engine/src/audio/: audio_track.rs  channels.rs  mod.rs  sample.rs  sample_rate.rs
engine/src/game_graphics/: game_graphics.rs  graphic_basics.rs  mod.rs  texture_graphics.rs
engine/src/graphics/: game_graphics.rs  graphic_basics.rs  graphics.rs  mod.rs  simple_graphics.rs  text_graphics.rs  texture_graphics.rs
engine/src/graphics/shaders/: simple_movement_vertex_shader.glsl  texture_fragment_shader.glsl  texture_moving_vertex_shader.glsl  texture_rotation_vertex_shader.glsl  texture_rotation_vertex_shader_120.glsl  texture_vertex_shader.glsl
engine/src/graphics/shaders/120/: simple_movement_vertex_shader.glsl  texture_moving_vertex_shader_120.glsl
engine/src/image/: mod.rs  texture.rs
engine/src/music/: linux.rs  mod.rs
engine/src/text/: mod.rs  text_base.rs
lib/: background.rs  click_map.rs  colors.rs  colours.rs  drawable.rs  image_base.rs  lib.rs  loading_flag.rs  object_map.rs  sync_raw_ptr.rs  text.rs  text_base.rs  traits.rs
lib/game_engine/: draw_state.rs  game_graphics.rs  game_texture.rs  game_window.rs  image_base.rs  mod.rs
lib/game_engine/text/: mod.rs  text_base.rs
lib/game_window/: draw_state.rs  game_graphics.rs  game_texture.rs  mod.rs  mouse_cursor.rs  wallpaper.rs
lib/object_map/: click_map.rs  layers.rs  mod.rs  objects.rs  traits.rs
lib/user_interface/: button.rs  buttons.rs  edit_text_view.rs  list.rs  menu.rs  mod.rs  mouse_cursor_icon.rs  slider.rs  text_view.rs  text_views.rs  wallpaper.rs
lib/user_interface2/: edit_text_view.rs  list.rs  menu.rs  slider.rs  text_views.rs  wallpaper.rs
resources/: game_name.txt  page_table.txt
resources/dialogues/: dialogue0.txt  До пересдачи.txt  На пересдаче.txt  Начало дня.txt  Начало.txt  После пересдачи.txt  Присоединение Кости.txt
resources/locale/: en_GB.rs  ru_RU.rs
settings/: game_settings  page_table  page_table.txt  settings.txt
src/: button.rs  character.rs  characters.rs  colors.rs  dialogue.rs  dialogue_box.rs  drawable.rs  game_settings.rs  game_window.rs  locale.rs  main.rs  main_tmp.rs  menu.rs  page_table.rs  pages.rs  settings.rs  text.rs  text_view.rs  textures.rs  traits.rs  wallpaper.rs
src/game_window/: mod.rs  mouse_cursor.rs  wallpaper.rs
src/pages/: enter_user_name.rs  intro.rs  loading_screen.rs  main_menu.rs  mod.rs  pause_menu.rs  settings.rs
src/user_interface/: button.rs  dialogue_box.rs  edit_text_view.rs  menu.rs  mod.rs  mouse_cursor.rs  slider.rs  text.rs  text_base.rs  text_view.rs  text_views.rs  wallpaper.rs
text/: dialogue0.txt  dialogue1.txt  dialogue2.txt
