[package]
name = "Visual_Novel"
version = "1.6.6"
authors = ["Clomance"]
edition = "2018"
build = "build.rs"

[features]
qrelease = []

[dependencies.cat_engine]
# path = "../cat_engine"
version = "0.2.1"
features = ["mouse_cursor_icon","audio","auto_hide","alpha_smoothing"]

[lib]
name="lib"
path="lib/lib.rs"

[profile.dev]
opt-level = 3
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false