[package]
name = "Visual_Novel"
version = "2.0.0"
authors = ["Clomance"]
edition = "2018"
build = "build.rs"

[features]
qrelease = []

[dependencies.cat_engine]
# Works only for Martya
path = "../CatEngine"
# Works only for Osya
#path = "../cat_engine"
#version = "0.5.0-alpha"
features = ["audio","auto_hide","colour_filter"]

[lib]
name="lib"
path="lib/lib.rs"

[profile.dev]
opt-level = 3
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false