[package]
name = "Visual-Novel"
version = "2.0.0"
authors = ["Clomance"]
edition = "2018"
# build = "build.rs"

[lib]
name = "lib"
path = "lib/lib.rs"

[dependencies.cat_engine]
version = "0.6.4"
features = ["audio","auto_hide"]

[profile.dev]
opt-level = 3
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
