[package]
name = "cat_engine"
version = "0.0.2"
authors = ["Clomance"]
edition = "2018"
homepage = "https://github.com/Clomance/Visual-Novel/tree/master/cat_engine"
repository = "https://github.com/Clomance/Visual-Novel/tree/master/cat_engine"
description = "Graphics engine with audio support"
documentation = "https://docs.rs/cat_engine/"
license = "MIT"
readme = "README.MD"
keywords = ["graphics","opengl","audio","playback"]
exclude = ["logo.png"]


[features]
default = ["text_graphics","simple_graphics","texture_graphics"]

text_graphics = ["rusttype"]
simple_graphics = []
texture_graphics = []

audio = ["cpal","minimp3"]

mouse_cursor_icon = ["texture_graphics"]

[package.metadata.docs.rs]
features = ["default","audio","mouse_cursor_icon"]

[dependencies]
image = "0.23.6"
glium = "0.27.0"
rusttype = { version = "0.9.2", optional = true }
cpal = { version = "0.11.0", optional = true }
minimp3 = { version = "0.3.5", optional = true }