[package]
name = "engine"
version = "0.0.0"
authors = ["Clomance"]
edition = "2018"

[features]
default = ["text_graphics","simple_graphics","texture_graphics"]

text_graphics = ["rusttype"]
simple_graphics = []
texture_graphics = []

audio = ["rodio"]

mouse_cursor_icon = ["texture_graphics"]


[dependencies]
image = "0.23.5"
glium = "0.27.0"
rusttype = { version = "0.9.2", optional = true }
rodio = { version = "0.11.0", optional = true }